# devops_study

./: .gitignore  README.md
docker/: Dockerfile
my_math/: package.xml  setup.cfg  setup.py
my_math/my_math/: calculator.py  circle.py  fibonacci.py  list_math_op.py  my_math  rectagule.py
my_math/test/: test_calculator.py  test_circle.py  test_fibonacci.py  test_list_math_op.py
ros2_prac_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_prac_ws/install/py_srvcli/share/py_srvcli/: package.sh  package.xml
ros2_prac_ws/install/tutorial_interfaces/include/tutorial_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ros2_prac_ws/install/tutorial_interfaces/include/tutorial_interfaces/srv/: custom_srv.h  custom_srv.hpp
ros2_prac_ws/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_prac_ws/log/: latest_build
ros2_prac_ws/src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
ros2_prac_ws/src/tutorial_interfaces/: CMakeLists.txt
temp/pytest_tutorial/: test_sample_1.py  test_sample_2.py
temp/ros2_prac_ws/src/py_srvcli/: setup.py
temp/ros2_prac_ws/src/py_srvcli/py_srvcli/: client_member_function.py
temp/ros2_prac_ws/src/tutorial_interfaces/: package.xml
(+31 files in other folders)
