<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_math</name>
  <version>0.0.1</version>
  <description>Math Operation in ROS2 for DevOps Class</description>
  <maintainer email="kasrlmoojoo@gmail.com">ksron</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
<test_depend>ament_cmake_cppcheck</test_depend>
<test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
